--- a/_config.yml
+++ b/_config.yml
@@ -9,4 +9,4 @@ twitter_username: Asthamor
 github_username:  Asthamor
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima
+theme: jekyll-theme-cayman
